--- a/spec/fixtures/vcr_cassettes/Background_API/gets_the_background.yml
+++ b/spec/fixtures/vcr_cassettes/Background_API/gets_the_background.yml
@@ -63,21 +63,21 @@ http_interactions:
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains
       Via:
-      - 1.1 vegur, 1.1 varnish
+      - 1.1 vegur, 1.1 varnish, 1.1 varnish
       Accept-Ranges:
       - bytes
       Date:
-      - Thu, 14 Jul 2022 01:29:10 GMT
+      - Thu, 14 Jul 2022 02:11:22 GMT
       Age:
-      - '648'
+      - '3180'
       X-Served-By:
-      - cache-iad-kiad7000096-IAD
+      - cache-iad-kjyo7100106-IAD, cache-ewr18183-EWR
       X-Cache:
-      - HIT
+      - HIT, HIT
       X-Cache-Hits:
-      - '1'
+      - 1, 1
       X-Timer:
-      - S1657762150.432639,VS0,VE2
+      - S1657764683.673138,VS0,VE1
       Vary:
       - Accept-Encoding, Origin,Authorization,Accept-Language,client-geo-region,Accept
     body:
@@ -88,5 +88,5 @@ http_interactions:
         Photographer, cinematographer living in Denver, Co. \r\nMy photos are a small
         glimpse of what I’m feeling or that perspective at that time. I love you.","location":"Denver
         Colorado","links":{"self":"https://api.unsplash.com/users/dillydallying","html":"https://unsplash.com/@dillydallying","photos":"https://api.unsplash.com/users/dillydallying/photos","likes":"https://api.unsplash.com/users/dillydallying/likes","portfolio":"https://api.unsplash.com/users/dillydallying/portfolio","following":"https://api.unsplash.com/users/dillydallying/following","followers":"https://api.unsplash.com/users/dillydallying/followers"},"profile_image":{"small":"https://images.unsplash.com/profile-1616266477156-e4cd50197e4dimage?ixlib=rb-1.2.1\u0026crop=faces\u0026fit=crop\u0026w=32\u0026h=32","medium":"https://images.unsplash.com/profile-1616266477156-e4cd50197e4dimage?ixlib=rb-1.2.1\u0026crop=faces\u0026fit=crop\u0026w=64\u0026h=64","large":"https://images.unsplash.com/profile-1616266477156-e4cd50197e4dimage?ixlib=rb-1.2.1\u0026crop=faces\u0026fit=crop\u0026w=128\u0026h=128"},"instagram_username":"Dillydally.ing","total_collections":0,"total_likes":60,"total_photos":379,"accepted_tos":true,"for_hire":true,"social":{"instagram_username":"Dillydally.ing","portfolio_url":"https://dillydally.myportfolio.com","twitter_username":"WannerDillon","paypal_email":null}},"tags":[{"type":"search","title":"denver"},{"type":"search","title":"co"},{"type":"search","title":"usa"}]}]}'
-  recorded_at: Thu, 14 Jul 2022 01:29:10 GMT
+  recorded_at: Thu, 14 Jul 2022 02:11:22 GMT
 recorded_with: VCR 6.0.0
