--- a/spec/fixtures/vcr_cassettes/RoadTripFacade/does_not_return_future_weather_conditions.yml
+++ b/spec/fixtures/vcr_cassettes/RoadTripFacade/does_not_return_future_weather_conditions.yml
@@ -21,11 +21,11 @@ http_interactions:
       Server:
       - openresty
       Date:
-      - Thu, 14 Jul 2022 13:25:16 GMT
+      - Thu, 14 Jul 2022 14:04:37 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '17724'
+      - '17704'
       Connection:
       - keep-alive
       X-Cache-Key:
@@ -38,13 +38,12 @@ http_interactions:
       - GET, POST
     body:
       encoding: UTF-8
-      string: '{"lat":38.2654,"lon":-104.6104,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1657805116,"sunrise":1657799180,"sunset":1657851712,"temp":76.28,"feels_like":75.4,"pressure":1008,"humidity":38,"dew_point":48.83,"uvi":0.45,"clouds":10,"visibility":10000,"wind_speed":1.99,"wind_deg":309,"wind_gust":5.01,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}]},"hourly":[{"dt":1657803600,"temp":76.28,"feels_like":75.4,"pressure":1008,"humidity":38,"dew_point":48.83,"uvi":0.45,"clouds":10,"visibility":10000,"wind_speed":7.2,"wind_deg":277,"wind_gust":12.93,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1657807200,"temp":77.27,"feels_like":76.33,"pressure":1009,"humidity":35,"dew_point":47.52,"uvi":1.52,"clouds":11,"visibility":10000,"wind_speed":8.68,"wind_deg":282,"wind_gust":14.14,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1657810800,"temp":80.28,"feels_like":79.5,"pressure":1010,"humidity":32,"dew_point":47.77,"uvi":3.5,"clouds":12,"visibility":10000,"wind_speed":8.61,"wind_deg":285,"wind_gust":11.95,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1657814400,"temp":84.83,"feels_like":82.4,"pressure":1010,"humidity":27,"dew_point":47.17,"uvi":6.09,"clouds":11,"visibility":10000,"wind_speed":5.64,"wind_deg":279,"wind_gust":7.56,"weather":[{"id":801,"main":"Clouds","description":"few
-        clouds","icon":"02d"}],"pop":0},{"dt":1657818000,"temp":89.96,"feels_like":86.4,"pressure":1011,"humidity":21,"dew_point":44.83,"uvi":8.78,"clouds":10,"visibility":10000,"wind_speed":3,"wind_deg":226,"wind_gust":5.86,"weather":[{"id":800,"main":"Clear","description":"clear
-        sky","icon":"01d"}],"pop":0},{"dt":1657821600,"temp":95.86,"feels_like":91.65,"pressure":1011,"humidity":16,"dew_point":41.63,"uvi":10.79,"clouds":9,"visibility":10000,"wind_speed":4.81,"wind_deg":170,"wind_gust":6.22,"weather":[{"id":800,"main":"Clear","description":"clear
+      string: '{"lat":38.2654,"lon":-104.6104,"timezone":"America/Denver","timezone_offset":-21600,"current":{"dt":1657807476,"sunrise":1657799180,"sunset":1657851712,"temp":80.64,"feels_like":79.79,"pressure":1014,"humidity":33,"dew_point":48.9,"uvi":1.52,"clouds":0,"visibility":10000,"wind_speed":6.91,"wind_deg":270,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}]},"hourly":[{"dt":1657807200,"temp":80.64,"feels_like":79.79,"pressure":1014,"humidity":33,"dew_point":48.9,"uvi":1.52,"clouds":0,"visibility":10000,"wind_speed":8.68,"wind_deg":282,"wind_gust":14.14,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1657810800,"temp":81.77,"feels_like":80.4,"pressure":1014,"humidity":31,"dew_point":48.22,"uvi":3.5,"clouds":3,"visibility":10000,"wind_speed":8.61,"wind_deg":285,"wind_gust":11.95,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1657814400,"temp":84.6,"feels_like":82.2,"pressure":1013,"humidity":27,"dew_point":46.98,"uvi":6.09,"clouds":5,"visibility":10000,"wind_speed":5.64,"wind_deg":279,"wind_gust":7.56,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1657818000,"temp":88.29,"feels_like":85.05,"pressure":1013,"humidity":23,"dew_point":45.84,"uvi":8.78,"clouds":6,"visibility":10000,"wind_speed":3,"wind_deg":226,"wind_gust":5.86,"weather":[{"id":800,"main":"Clear","description":"clear
+        sky","icon":"01d"}],"pop":0},{"dt":1657821600,"temp":92.82,"feels_like":88.99,"pressure":1012,"humidity":19,"dew_point":44.55,"uvi":10.79,"clouds":7,"visibility":10000,"wind_speed":4.81,"wind_deg":170,"wind_gust":6.22,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"pop":0},{"dt":1657825200,"temp":97.66,"feels_like":93.16,"pressure":1010,"humidity":14,"dew_point":40.8,"uvi":11.15,"clouds":2,"visibility":10000,"wind_speed":5.97,"wind_deg":155,"wind_gust":7.11,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"pop":0.04},{"dt":1657828800,"temp":98.96,"feels_like":94.28,"pressure":1010,"humidity":13,"dew_point":40.06,"uvi":10.43,"clouds":3,"visibility":10000,"wind_speed":6.64,"wind_deg":160,"wind_gust":7.34,"weather":[{"id":800,"main":"Clear","description":"clear
         sky","icon":"01d"}],"pop":0},{"dt":1657832400,"temp":99.77,"feels_like":95.11,"pressure":1009,"humidity":13,"dew_point":40.08,"uvi":8.49,"clouds":6,"visibility":10000,"wind_speed":7.09,"wind_deg":171,"wind_gust":7.72,"weather":[{"id":800,"main":"Clear","description":"clear
@@ -87,7 +86,8 @@ http_interactions:
         clouds","icon":"04n"}],"pop":0.24},{"dt":1657965600,"temp":74.28,"feels_like":73.81,"pressure":1014,"humidity":51,"dew_point":54.57,"uvi":0,"clouds":99,"visibility":10000,"wind_speed":6.2,"wind_deg":126,"wind_gust":10.22,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04n"}],"pop":0.12},{"dt":1657969200,"temp":73.31,"feels_like":72.88,"pressure":1014,"humidity":54,"dew_point":55.04,"uvi":0,"clouds":100,"visibility":10000,"wind_speed":3.06,"wind_deg":164,"wind_gust":4.97,"weather":[{"id":804,"main":"Clouds","description":"overcast
         clouds","icon":"04n"}],"pop":0.12},{"dt":1657972800,"temp":72.81,"feels_like":72.41,"pressure":1014,"humidity":56,"dew_point":55.45,"uvi":0,"clouds":100,"visibility":10000,"wind_speed":2.28,"wind_deg":182,"wind_gust":4.27,"weather":[{"id":804,"main":"Clouds","description":"overcast
-        clouds","icon":"04d"}],"pop":0.08}],"daily":[{"dt":1657825200,"sunrise":1657799180,"sunset":1657851712,"moonrise":1657856820,"moonset":1657801740,"moon_phase":0.54,"temp":{"day":97.66,"min":75.38,"max":100.18,"night":81.16,"eve":98.51,"morn":76.28},"feels_like":{"day":93.16,"night":80.31,"eve":93.83,"morn":75.4},"pressure":1010,"humidity":14,"dew_point":40.8,"wind_speed":9.55,"wind_deg":359,"wind_gust":22.86,"weather":[{"id":500,"main":"Rain","description":"light
+        clouds","icon":"04d"}],"pop":0.08},{"dt":1657976400,"temp":74.71,"feels_like":74.34,"pressure":1014,"humidity":52,"dew_point":55.35,"uvi":0.42,"clouds":100,"visibility":10000,"wind_speed":2.1,"wind_deg":236,"wind_gust":4.63,"weather":[{"id":804,"main":"Clouds","description":"overcast
+        clouds","icon":"04d"}],"pop":0}],"daily":[{"dt":1657825200,"sunrise":1657799180,"sunset":1657851712,"moonrise":1657856820,"moonset":1657801740,"moon_phase":0.54,"temp":{"day":97.66,"min":76.23,"max":100.18,"night":81.16,"eve":98.51,"morn":79.81},"feels_like":{"day":93.16,"night":80.31,"eve":93.83,"morn":79.81},"pressure":1010,"humidity":14,"dew_point":40.8,"wind_speed":9.55,"wind_deg":359,"wind_gust":22.86,"weather":[{"id":500,"main":"Rain","description":"light
         rain","icon":"10d"}],"clouds":2,"pop":0.22,"rain":0.14,"uvi":11.15},{"dt":1657911600,"sunrise":1657885623,"sunset":1657938082,"moonrise":1657945500,"moonset":1657892880,"moon_phase":0.58,"temp":{"day":94.68,"min":74.82,"max":100.31,"night":76.73,"eve":90.81,"morn":76.98},"feels_like":{"day":91.33,"night":76.23,"eve":88.02,"morn":76.41},"pressure":1012,"humidity":21,"dew_point":48.7,"wind_speed":25.43,"wind_deg":338,"wind_gust":30.06,"weather":[{"id":500,"main":"Rain","description":"light
         rain","icon":"10d"}],"clouds":6,"pop":0.6,"rain":0.52,"uvi":11.68},{"dt":1657998000,"sunrise":1657972067,"sunset":1658024450,"moonrise":1658033820,"moonset":1657983840,"moon_phase":0.62,"temp":{"day":93.94,"min":70.95,"max":98.82,"night":72.19,"eve":76.37,"morn":74.71},"feels_like":{"day":90.93,"night":72.12,"eve":76.3,"morn":74.34},"pressure":1010,"humidity":23,"dew_point":50.61,"wind_speed":17.45,"wind_deg":338,"wind_gust":21.81,"weather":[{"id":501,"main":"Rain","description":"moderate
         rain","icon":"10d"}],"clouds":24,"pop":0.94,"rain":4.31,"uvi":10.93},{"dt":1658084400,"sunrise":1658058511,"sunset":1658110816,"moonrise":1658121900,"moonset":1658074500,"moon_phase":0.65,"temp":{"day":93.42,"min":70.56,"max":97.74,"night":87.21,"eve":97.41,"morn":70.56},"feels_like":{"day":89.6,"night":83.89,"eve":92.89,"morn":70.18},"pressure":1011,"humidity":19,"dew_point":45.43,"wind_speed":10.69,"wind_deg":163,"wind_gust":22.75,"weather":[{"id":800,"main":"Clear","description":"clear
@@ -96,7 +96,7 @@ http_interactions:
         rain","icon":"10d"}],"clouds":86,"pop":1,"rain":3.29,"uvi":12},{"dt":1658343600,"sunrise":1658317849,"sunset":1658369905,"moonrise":1658297700,"moonset":1658345520,"moon_phase":0.75,"temp":{"day":90.7,"min":70.57,"max":98.37,"night":84.25,"eve":98.1,"morn":70.57},"feels_like":{"day":87.73,"night":82.02,"eve":93.6,"morn":70.02},"pressure":1009,"humidity":25,"dew_point":50.16,"wind_speed":13.11,"wind_deg":295,"wind_gust":18.12,"weather":[{"id":500,"main":"Rain","description":"light
         rain","icon":"10d"}],"clouds":61,"pop":0.98,"rain":0.8,"uvi":12},{"dt":1658430000,"sunrise":1658404296,"sunset":1658456264,"moonrise":1658385600,"moonset":1658435640,"moon_phase":0.79,"temp":{"day":96.78,"min":74.68,"max":101.28,"night":83.84,"eve":89.35,"morn":74.68},"feels_like":{"day":92.61,"night":81.88,"eve":86.05,"morn":73.78},"pressure":1006,"humidity":16,"dew_point":43.72,"wind_speed":26.89,"wind_deg":316,"wind_gust":29.08,"weather":[{"id":801,"main":"Clouds","description":"few
         clouds","icon":"02d"}],"clouds":16,"pop":0.14,"uvi":12}]}'
-  recorded_at: Thu, 14 Jul 2022 13:25:16 GMT
+  recorded_at: Thu, 14 Jul 2022 14:04:36 GMT
 - request:
     method: get
     uri: http://www.mapquestapi.com/directions/v2/route?from=denver,co&key=<fake_geo>&to=london,uk
@@ -116,17 +116,17 @@ http_interactions:
       message: ''
     headers:
       Date:
-      - Thu, 14 Jul 2022 13:25:17 GMT
+      - Thu, 14 Jul 2022 14:04:37 GMT
       Content-Type:
       - application/json;charset=UTF-8
       Content-Length:
       - '278'
       Set-Cookie:
-      - JSESSIONID=0AB4645B349397BA5AB4BF3C9C5B90E0; Path=/directions; HttpOnly
+      - JSESSIONID=5EC614AC9B70D867C4D62F16D5A43E33; Path=/directions; HttpOnly
       Expires:
       - Mon, 20 Dec 1998 01:00:00 GMT
       Last-Modified:
-      - Thu, 14 Jul 2022 13:25:17 GMT
+      - Thu, 14 Jul 2022 14:04:37 GMT
       Cache-Control:
       - no-cache, must-revalidate
       Pragma:
@@ -144,5 +144,5 @@ http_interactions:
       string: '{"route":{"routeError":{"errorCode":2,"message":""}},"info":{"statuscode":402,"copyright":{"imageAltText":"©
         2022 MapQuest, Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","text":"©
         2022 MapQuest, Inc."},"messages":["We are unable to route with the given locations."]}}'
-  recorded_at: Thu, 14 Jul 2022 13:25:17 GMT
+  recorded_at: Thu, 14 Jul 2022 14:04:37 GMT
 recorded_with: VCR 6.0.0
